<resources>
    <string name="app_name">SafeZone</string>
    <string name="title_home">Home</string>
    <string name="title_exceptions">Exceptions</string>
    <string name="title_settings">Settings</string>
    <string name="app_blocked">This app has been blocked due to a rule.</string>
    <string name="app_killed">The app has been terminated due to a rule</string>
    <string name="force_kill_button">FORCE STOP</string>
    <string name="force_kill_ok_button">OK</string>
    <string name="name_good_filter">Learned Good</string>
    <string name="name_bad_filter">Learned Bad</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="save">Save</string>
    <string name="swap_side">Swap Side</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="help_learn_mode_title">Help (Learn Mode)</string>
    <string name="help_learn_mode_body">The Learn Mode identifies different screens, such as History, Settings, and Main Screen, based on their design. You can use the thumbs-up button to mark a screen as "good" and the thumbs-down button to mark it as "bad." To remove a screen from a category, simply click the corresponding button again. If you press and hold a button, the screen will be immediately added to your desired category. The settings button provides additional options for customization. The current filter results are displayed above the buttons, and a blue background indicates that the screen has been learned but not yet saved.</string>
    <string name="message_body_blocked_by_learned">This app was block because of my memory. Use Learn mode to fix it.</string>
    <string name="message_title_blocked_by_learned">Learned Block: </string>
    <string name="learn_mode_label_thump_down">🛑</string>
    <string name="learn_mode_label_thumb_up">👍</string>
    <string name="learn_mode_more_options_symbol">…</string>
    <string name="button_request_device_admin">Request Device Admin</string>
    <string name="button_request_accessabilty_permission">Request Accessibility Permission</string>
    <string name="force_kill">Force Kill</string>
    <string name="pipeline_result_additional_info_label">Trigger Reason:</string>
    <string name="warning_window">Warning Window</string>
    <string name="pipline_result_main_win_action">Window Action</string>
    <string name="pipeline_result_additional_actions_labels">Actions</string>
    <string name="filter_name">Smart Filter Name</string>
    <string name="filter_typ">Filter Typ</string>
    <string name="pipeline_result_trigger_infos_labels">Trigger Info</string>
    <string name="app_name_label">App Name</string>
    <string name="additional_parameters">Parameters</string>
    <string name="home_button">Home Button</string>
    <string name="nothing">Nothing</string>
    <string name="back_button">Back Button</string>
    <string name="lock_status_title">State</string>
    <string name="lock_state_secure">Locked since: %1$s</string>
    <string name="app_working_but_disablable">Working (not Locked)</string>
    <string name="lock_state_disabled">Service Disabled</string>
    <string name="lock_state_no_admin">Working (Without Device Admin)</string>
    <string name="app_version_title">App Version</string>
    <string name="button_disable_locking">Disable Locking</string>
    <string name="ok">ok</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_pin_to_proced">Please enter the PIN to proceed:</string>
    <string name="incorrect_pin_message">Wrong PIN! Please try again.</string>
    <string name="button_enable_lock">Eternal Lock</string>
    <string name="warning">Warning</string>
    <string name="warning_enable_app_lock">Enabling this lock will prevent you from disabling or uninstalling the app. Do you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="use_warn_windows">Use Block Windows</string>
    <string name="log_blocking">Log Blocking</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="waiting_bg_task">waiting..</string>
    <string name="explanation_title">"Explanation "</string>
    <string name="anti_cheat_label">Anti Cheat Options</string>
    <string name="anti_cheat_pin_status">Use PIN Protection</string>
    <string name="time_lock_label">Use Time Lock</string>
    <string name="debbuging_options">Debugging</string>
    <string name="settings_view">View</string>
    <string name="enter_duration_h">Increment Duration in hours</string>
    <string name="message_enter_duration_h">Enter an additional duration. The app can only be unlocked once the duration is completed.</string>
    <string name="message_time_to_big">Duration too long</string>
    <string name="locked_till">Locked Until: </string>
    <string name="no_time_lock">No Time Lock</string>
    <string name="pin_disabled">PIN disabled</string>
    <string name="enter_new_pin">Enter intial PIN</string>
    <string name="set_intial_pin">Set intial PIN (no recovery):</string>
    <string name="pin_mismatch">PIN mismatch</string>
    <string name="disable_pin">Disable PIN</string>
    <string name="enable_pin">Enable PIN</string>
    <string name="cancel">Cancel</string>
    <string name="add_exception">Add Exception</string>
    <string name="delete">Delete</string>
    <string name="app_not_found">(Not Installed)</string>
    <string name="search_apps">Search Apps</string>
    <string name="title_rules">Rules</string>
    <string name="add_app_rule">Add App Rule</string>
    <string name="app_rule_detail_activity">AppRuleDetailActivity</string>
    <string name="rules_for">Rules for</string>
    <string name="usage_restriction">Usage Restricton</string>
    <string name="none">None</string>
    <string name="usage_restriction_for">Usage Restriction for</string>
    <string name="usage_restriction_activity">UsageRestrictionActivitiy</string>
    <string name="enabled">Enabled</string>
    <string name="usage_restriction_restriction">Enables or disables these settings</string>
    <string name="log_blocking_description">Writing keyword filter actions to Disk</string>
    <string name="use_block_windows_description">Displays a dialog when a rule is violated</string>
    <string name="increment_time">Increase Timelock</string>
    <string name="app_kill_description">Use UI automation to kill the app</string>
    <string name="is_explainable">Explainable</string>
    <string name="explainable_description">Makes the trigger reason explainable</string>
    <string name="actions">Action</string>
    <string name="auto_press">Auto-Press</string>
    <string name="window_action_description">An action against app</string>
    <string name="choose_a_option">Choose a option</string>
    <string name="invalid_number">Please enter a valid number</string>
    <string name="usage_limits">Usage Limits</string>
    <string name="number_of_starts">App starts</string>
    <string name="time_limit">Time Limit</string>
    <string name="reset_period">Limits Reset Period</string>
    <string name="restricted_times">Restricted Times</string>
    <string name="week_days">Applied Weekdays</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="black_list">Blocked Period</string>
    <string name="blocked_period_description">If the this is unchecked all other times except this are blocked</string>
    <string name="set_start_time">Start</string>
    <string name="set_end_time">End</string>
    <string name="add_time_rule">+ Add Time Restriction</string>
    <string name="action">Action</string>
    <string name="rules">Rules</string>
    <string name="open">Open</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="edit_filter_words">Edit Words</string>
</resources>