<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <com.example.ourpact3.ui.settings.ReusableSettingsItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:summary="Define the start of the rule"
        app:title2="@string/start_time" />
    <com.example.ourpact3.ui.settings.ReusableSettingsItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:summary="Define the end of the rule"
        app:title2="@string/end_time" />
    <com.example.ourpact3.ui.settings.ReuseableBooleanSettingView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:description="@string/blocked_period_description"
        app:isEnabled="false"
        app:label="@string/black_list" />


    <com.example.ourpact3.ui.settings.ReusableSettingsHeaderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/week_days" />
    <com.example.ourpact3.ui.settings.ReuseableBooleanSettingView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:description=""
        app:isEnabled="false"
        app:label="@string/monday" />
    <com.example.ourpact3.ui.settings.ReuseableBooleanSettingView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:description=""
        app:isEnabled="false"
        app:label="@string/tuesday" />

    <com.example.ourpact3.ui.settings.ReuseableBooleanSettingView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:description=""
        app:isEnabled="false"
        app:label="@string/wednesday" />

</LinearLayout>
