<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            app:titleTextColor="@android:color/white">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Detail"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.example.ourpact3.ui.settings.ReuseableSettingsBooleanView
                android:id="@+id/setting_input_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:description="@string/usage_restriction_restriction"
                app:isEnabled="false"
                app:label="@string/enabled" />

            <com.example.ourpact3.ui.settings.ReusableSettingsHeaderView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/usage_limits" />

            <com.example.ourpact3.ui.settings.ReusableSettingsItemView
                android:id="@+id/setting_input_number_of_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="0"
                app:title2="@string/number_of_starts" />

            <com.example.ourpact3.ui.settings.ReusableSettingsItemView
                android:id="@+id/setting_input_time_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="0"
                app:title2="@string/time_limit" />

            <com.example.ourpact3.ui.settings.ReusableSettingsItemView
                android:id="@+id/setting_input_reset_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="0"
                app:title2="@string/reset_period" />

            <com.example.ourpact3.ui.settings.ReusableSettingsHeaderView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/restricted_times" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.example.ourpact3.ui.settings.ReusableSettingsItemView
                    android:id="@+id/setting_input_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    app:summary="@string/none"
                    app:title2="@string/set_start_time" />


                <com.example.ourpact3.ui.settings.ReusableSettingsItemView
                    android:id="@+id/setting_input_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:summary="@string/none"
                    app:title2="@string/set_end_time" />
            </LinearLayout>

            <com.example.ourpact3.ui.settings.ReusableSettingsItemView
                android:id="@+id/setting_input_weekdays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/none"
                app:title2="@string/week_days" />

            <Button
                android:id="@+id/add_time_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/add_time_rule" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_time_rules"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.example.ourpact3.ui.settings.ReusableSettingsCounterActionView
                android:id="@+id/setting_counter_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:readonly="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
