<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment" >


<!--    <FrameLayout-->
<!--        android:id="@+id/accessibilityButtonContainer"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:padding="16dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/button_enable_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_enable_lock" />


        <Button
            android:id="@+id/button_disable_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_disable_locking" />

<!--    Options    -->
        <TextView
            android:id="@+id/pipeline_result_additional_actions_labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anti_cheat_label"
            android:textColor="@color/lime_dark"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anti_cheat_pin_status"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/password_protection_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="My Filter"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_lock_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_lock_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="My Filter"
                android:textSize="14sp" />

        </LinearLayout>
<!--        Few Options-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_view"
            android:textColor="@color/lime_dark"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/use_warn_windows"
                android:textSize="14sp" />
            <Switch
                android:id="@+id/use_warn_windows_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
<!--Log Blocking-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debbuging_options"
            android:textColor="@color/lime_dark"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_blocking"
                android:textSize="14sp" />
            <Switch
                android:id="@+id/log_blocking_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>