<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            app:titleTextColor="@android:color/white">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.example.ourpact3.ui.settings.ReuseableSettingsBooleanView
                android:id="@+id/setting_input_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:description="@string/usage_restriction_restriction"
                app:isEnabled="false"
                app:label="@string/enabled" />

            <com.example.ourpact3.ui.settings.ReusableSettingsHeaderView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/rules" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_filter_rules"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
